# iris-root

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  build.gradle  docker-compose.yml  gradle.properties  patches.path  renovate.json  settings.gradle
.github/: dependabot.yml
agent-base/: setup.py  (+7 more)
modules/knowledge-measure-businness/: .gitignore  Jenkinsfile  README.md  biz_test-NS-bill.ipynb  biz_test-NS.ipynb  biz_test-TS.ipynb  pyproject.toml  requirements.txt  setup.cfg  tox.ini
modules/knowledge-measure-businness/business_layer/: base_business_layer.py  business_layer_ns.py  business_layer_ts.py  config_ns.yaml  config_ns_bill.yaml  config_ts.yaml  errors.py  message_dispatchers.py
modules/knowledge-measure-businness/business_layer/api/: __init__.py  api.py
modules/knowledge-measure-businness/business_layer/comment/: comment.py  sentiment_config.py
modules/knowledge-measure-businness/business_layer/config/: __init__.py  config.py  datatypes.py
modules/knowledge-measure-businness/business_layer/custom_knowledge/: identity.py
modules/knowledge-measure-businness/business_layer/custom_measure/: NOT_USED_individual.py  entity_type.py  example_sanctions.py  name.py  sanctions.py
modules/knowledge-measure-businness/docker/: docker-compose.yaml
modules/knowledge-measure-businness/docs/: build.sh  conf.py  index.rst
modules/knowledge-measure-businness/research/: name_preconditions_rules.py  org_name_agent.py
modules/knowledge-measure-businness/scripts/: clean.sh  launch.sh  prepare.sh  test.sh
(+22594 files in other folders)
