[options]
packages = business_layer, research

[tool:pytest]
addopts =
	-v
python_files =
	test_*.py
	tests.py

[tool:isort]
profile = black
line_length = 100

[flake8]
max-line-length = 100
max-complexity = 12
exclude =
	.git,
	.tox,
	*.json,
	*.csv,
	__pycache_,
	venv*,
	dist,
	business_layer/temp_org_proto/
statistics = true
tree = true
select = C,E,F,W,B
ignore = E203,W503
